--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 640px) {
 
-    h1 {
+    h1, header {
 
         font-size: 2.5rem;
         margin-left: 0;
